--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,1 @@
-.DS_Store
-#dist/
-**/*.log
-**/*.test.js
-**/*.test.json
-**/*.test.vue
-**/*.test.md
-
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.local
-
-./cmd/main/.env
+cmd/main/.env
